fix video aspect ratio being too wide

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
 
 .App-main-youtube {
   width: 80vw;
-  height: 30vw;
+  height: 50vw;
 }
 
 @keyframes App-logo-spin {
